about, experience, connect sections added

--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Natalia's page</title>
 </head>
 <body>
-    
+    <h1>Natalia Sokolova</h1>
+    <h2>About</h2>
+      <p>I am a freelance web developer and designer specializing in high-quality Shopify & and WordPress development. I update, maintain, and troubleshoot websites.</p>
+    <h2>Experience</h2>
+      <ul>
+        <li>Data Analyst, Intern</li>
+        <li>Freelance Web Developer and SEO specialist</li>
+      </ul>
+      <p>Identified the clients and the project’s needs to increase their conversion rates and decrease their bounce rates.
+        Stayed up-to-date on the latest SEO best practices.
+        Developed on-site body content and page titles in support of SEO strategies.
+        Optimized keyword use and effectiveness.
+        Cross-tested website designs across multiple browsers.
+        Managed WordPress content, designed and installed multiple plugins.
+        Collaborated to manage all web change requests, updates including designing, developing new pages, sections as needed.
+        Built several responsive sites and completely from scratch made use of web tools to set up and manage websites using HTML5, CSS, JavaScript.</p>
+    <h2>Connect</h2>   
+    <ul>
+        <li><a href="www.linkedin.com/in/sokolovanatalia">Linkedin</a></li>
+       <li><a href="https://github.com/NataliaSokolova">Github</a></li>
+    </ul> 
 </body>
 </html>
