html boilerplate and html markup done

--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <title>Natalia's page</title>
 </head>
 <body>
+  <nav>
+    <a href="/css/">About</a> |
+    <a href="/js/">Portfolio</a> |
+    <a href="/python/">Blog</a>
+    <a href="/html/">Contact</a> |
+  </nav>
     <h1>Natalia Sokolova</h1>
-    <h2>About</h2>
-      <p>I am a freelance web developer and designer specializing in high-quality Shopify & and WordPress development. I update, maintain, and troubleshoot websites.</p>
-    <h2>Experience</h2>
+    <section id="About">
+      <h2>About</h2>
+        <p>I am a freelance web developer and designer specializing in high-quality Shopify & and WordPress development. I update, maintain, and troubleshoot websites.</p>
+    </section> 
+
+    <section id = "Experience"> 
+      <h2>Experience</h2>
       <ul>
         <li>Data Analyst, Intern</li>
         <li>Freelance Web Developer and SEO specialist</li>
@@ -22,10 +32,14 @@
         Managed WordPress content, designed and installed multiple plugins.
         Collaborated to manage all web change requests, updates including designing, developing new pages, sections as needed.
         Built several responsive sites and completely from scratch made use of web tools to set up and manage websites using HTML5, CSS, JavaScript.</p>
-    <h2>Connect</h2>   
-    <ul>
-        <li><a href="www.linkedin.com/in/sokolovanatalia">Linkedin</a></li>
-       <li><a href="https://github.com/NataliaSokolova">Github</a></li>
-    </ul> 
+   
+    </section> 
+    <section>
+      <h2>Connect</h2>   
+        <ul>
+          <li><a href="www.linkedin.com/in/sokolovanatalia">Linkedin</a></li>
+          <li><a href="https://github.com/NataliaSokolova">Github</a></li>
+        </ul> 
+    </section>     
 </body>
 </html>
