html boilerplate and html markup done with corrections

--- a/index.html
+++ b/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="lesson-9">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natalia's page</title>
 </head>
 <body>
+
+
   <nav>
     <a href="/css/">About</a> |
     <a href="/js/">Portfolio</a> |
     <a href="/python/">Blog</a>
     <a href="/html/">Contact</a> |
   </nav>
+  
     <h1>Natalia Sokolova</h1>
+    
     <section id="About">
       <h2>About</h2>
         <p>I am a freelance web developer and designer specializing in high-quality Shopify & and WordPress development. I update, maintain, and troubleshoot websites.</p>
@@ -33,13 +38,15 @@
         Collaborated to manage all web change requests, updates including designing, developing new pages, sections as needed.
         Built several responsive sites and completely from scratch made use of web tools to set up and manage websites using HTML5, CSS, JavaScript.</p>
    
-    </section> 
-    <section>
+      </section> 
+
+    <section  id = "Connect">
       <h2>Connect</h2>   
         <ul>
           <li><a href="www.linkedin.com/in/sokolovanatalia">Linkedin</a></li>
           <li><a href="https://github.com/NataliaSokolova">Github</a></li>
         </ul> 
-    </section>     
+    </section>  
+
 </body>
 </html>
