--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 
 
   <nav>
-    <a href="/css/">About</a> |
-    <a href="/js/">Portfolio</a> |
-    <a href="/python/">Blog</a>
-    <a href="/html/">Contact</a> |
+    <a href="#About">About</a> |
+    <a href="#Experience">Experience</a> |
+    <a href="#Connect">Connect</a>
   </nav>
   
     <h1>Natalia Sokolova</h1>
