--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class = "contentsec">
         <img src="img/IMG_1.jpg" alt="Pictute of web developer" width="400" height="300"> 
       </div>
-      <div class = "contentsec2"c>
+      <div class = "contentsec2">
         <h1>Hello! I'm Natalia Sokolova</h1>
           <p>I am a freelance web developer specializing in high-quality Shopify & and WordPress development.</p>
           <button type="button">Let's talk!</button> 
