updated all comments

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class = "contentsec">
         <img src="img/IMG_1.jpg" alt="Pictute of web developer" width="400" height="300"> 
       </div>
-      <div class = "contentsec2">
+      <div class = "flex-container">
         <h1>Hello! I'm Natalia Sokolova</h1>
           <p>I am a freelance web developer specializing in high-quality Shopify & and WordPress development.</p>
           <button type="button">Let's talk!</button> 
@@ -47,10 +47,10 @@
     
     <section id = "experience"> 
       <h2>Experience</h2>
-        <div class = "container">
-          <div>Data Analyst, Intern</div>
-          <div>Freelance Web Developer and SEO specialist</div>
-        </div>
+        <ul class = "container">
+          <li>Data Analyst, Intern</li>
+          <li>Freelance Web Developer and SEO specialist</li>
+        </ul>
           <p class = "experience-section">Identified the clients and the project’s needs to increase their conversion rates and decrease their bounce rates.
         Stayed up-to-date on the latest SEO best practices.
         Developed on-site body content and page titles in support of SEO strategies.
@@ -87,7 +87,7 @@
     <section id="projects" class="projects-section">
         
       <div class="project-card">
-          <img src="img/img_2.png"" alt="Project 1" class="project-image">
+          <img src="img/img_2.png" alt="Project 1" class="project-image">
           <div class="project-details">
               <h3>Project Title 3</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
