--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <header>
   <nav>
     <div class="nav-links">
-      <a href="index.html">HOME</a>
       <a href="#about">ABOUT</a>
       <a href="#experience">EXPERIENCE</a>
       <a href="#skills">SKILLS</a>
@@ -27,10 +26,10 @@
 </header>
 
 <main>
-  
+
    <div class = "content">
       <div class = "contentsec">
-        <img src="img/IMG_1.jpg" alt="Pictute of web developer" width="400" height="300"> 
+        <img class = "article-image" src="img/IMG_1.jpg" alt="Pictute of web developer" width="400" height="300"> 
       </div>
       <div class = "flex-container">
         <h1>Hello! I'm Natalia Sokolova</h1>
