--- a/index.html
+++ b/index.html
@@ -116,7 +116,28 @@
   </ul>
 </section>  
 
+<section>
+    <h2>Leave a Message</h2>
+    <form name = "leave_message">
+        <label for="usersName">Name:</label><br>
+        <input type  = "text"  name = "usersName" required ><br>
+        <label for="usersEmail">Email:</label><br>
+        <input type = "email" name = "usersEmail" required><br>
+        <label for="usersMessage">Message:</label>
 
+        <textarea name = "usersMessage" required></textarea><br>
+            <button type= "submit">Submit</button>
+      
+
+    </form>
+</section>
+<section id = "messages">
+    <h2>Messages</h2>
+      <ul>
+        
+      </ul>
+
+</section>
 <footer>
       <div class="footer-container" id = "connect">
           <div class="footer-section">
