form and functionality added

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <input type  = "text"  name = "usersName" required ><br>
         <label for="usersEmail">Email:</label><br>
         <input type = "email" name = "usersEmail" required><br>
-        <label for="usersMessage">Message:</label>
+        <label for="usersMessage">Message:</label><br>
 
         <textarea name = "usersMessage" required></textarea><br>
             <button type= "submit">Submit</button>
@@ -134,7 +134,7 @@
 <section id = "messages">
     <h2>Messages</h2>
       <ul>
-        
+
       </ul>
 
 </section>
