fixed CSS styles

--- a/index.html
+++ b/index.html
@@ -74,11 +74,7 @@
   <section id="projects" >
     <h2>Take A Look At My Recent Projects</h2>
        <div class="projects-section">
-          <div class="project-details">
-                <h3>Project Title 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <a href="https://linktoproject1.com" target="_blank" class="project-link">View Project</a>
-            </div>
+        
         </div>
        
     </section>  
@@ -91,7 +87,7 @@
   </ul>
 </section>  
 
-<section>
+<section class ="leavemessage">
     <h2>Leave a Message</h2>
     <form name = "leave_message">
         <label for="usersName">Name:</label><br>
