--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class = "flex-container">
         <h1>Hello! I'm Natalia Sokolova</h1>
           <p>Hello! I'm Natalia Sokolova, a passionate freelance web developer specializing in high-quality Shopify and WordPress platforms. With a focus on creating responsive, user-friendly websites, I bring digital ideas to life.</p>
-          <a href="#messages" class="button-contentsec">Let's talk!</a>
+          <a href="#talkButn" class="button-contentsec">Let's talk!</a>
       </div>      
    </div>
     
@@ -78,7 +78,7 @@
         </div>
        
     </section>  
-</main>
+
 
 <section id = "skills">
   <h2>Skills</h2>
@@ -110,6 +110,8 @@
       </ul>
 
 </section>
+
+</main>
 <footer>
       <div class="footer-container" id = "connect">
           <div class="footer-section">
